--- a/.github/workflows/metadata-updater.yml
+++ b/.github/workflows/metadata-updater.yml
@@ -20,14 +20,14 @@ jobs:
       - name: Update metadata
         run: npm run update-metadata
 
-      - name: Push changes
+      - name: Commit Changes
         run: |
           git config user.name 'vighnesh153'
           git config user.email 'me@vighnesh153.com'
           git add metadata
-          git commit -m "chore: update metadata"
+          git commit -m "chore: update metadata" --no-verify
 
-      - name: create pull request
+      - name: Create Pull Request
         run: |
           gh pr create \
             -B main \
